parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IN
    PACKED
    SET
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> program_head routine DOT
Rule 2     program_head -> PROGRAM NAME SEMI
Rule 3     routine -> routine_head routine_body
Rule 4     sub_routine -> routine_head routine_body
Rule 5     routine_head -> label_part const_part type_part var_part routine_part
Rule 6     label_part -> epsilon
Rule 7     const_part -> CONST const_expr_list
Rule 8     const_part -> epsilon
Rule 9     const_expr_list -> const_expr_list NAME EQUAL const_value SEMI
Rule 10    const_expr_list -> NAME EQUAL const_value SEMI
Rule 11    const_value -> INTEGER
Rule 12    const_value -> REAL
Rule 13    const_value -> CHAR
Rule 14    const_value -> STRING
Rule 15    const_value -> SYS_CON
Rule 16    type_part -> TYPE type_decl_list
Rule 17    type_part -> epsilon
Rule 18    type_decl_list -> type_decl_list type_definition
Rule 19    type_decl_list -> type_definition
Rule 20    type_definition -> NAME EQUAL type_decl SEMI
Rule 21    type_decl -> simple_type_decl
Rule 22    type_decl -> array_type_decl
Rule 23    type_decl -> record_type_decl
Rule 24    simple_type_decl -> SYS_TYPE
Rule 25    simple_type_decl -> NAME
Rule 26    simple_type_decl -> LP name_list RP
Rule 27    simple_type_decl -> const_value DOTDOT const_value
Rule 28    simple_type_decl -> MINUS const_value DOTDOT const_value
Rule 29    simple_type_decl -> MINUS const_value DOTDOT MINUS const_value
Rule 30    simple_type_decl -> NAME DOTDOT NAME
Rule 31    array_type_decl -> ARRAY LB simple_type_decl RB OF type_decl
Rule 32    record_type_decl -> RECORD field_decl_list END
Rule 33    field_decl_list -> field_decl_list field_decl
Rule 34    field_decl_list -> field_decl
Rule 35    field_decl -> name_list COLON type_decl SEMI
Rule 36    name_list -> name_list COMMA NAME
Rule 37    name_list -> NAME
Rule 38    var_part -> VAR var_decl_list
Rule 39    var_part -> epsilon
Rule 40    var_decl_list -> var_decl_list var_decl
Rule 41    var_decl_list -> var_decl
Rule 42    var_decl -> name_list COLON type_decl SEMI
Rule 43    routine_part -> routine_part function_decl
Rule 44    routine_part -> routine_part procedure_decl
Rule 45    routine_part -> function_decl
Rule 46    routine_part -> procedure_decl
Rule 47    routine_part -> epsilon
Rule 48    function_decl -> function_head SEMI sub_routine SEMI
Rule 49    function_head -> FUNCTION NAME parameters COLON simple_type_decl
Rule 50    procedure_decl -> procedure_head SEMI sub_routine SEMI
Rule 51    procedure_head -> PROCEDURE NAME parameters
Rule 52    parameters -> LP para_decl_list RP
Rule 53    parameters -> epsilon
Rule 54    para_decl_list -> para_decl_list SEMI para_type_list
Rule 55    para_decl_list -> para_type_list
Rule 56    para_type_list -> var_para_list COLON simple_type_decl
Rule 57    para_type_list -> val_para_list COLON simple_type_decl
Rule 58    var_para_list -> VAR name_list
Rule 59    val_para_list -> name_list
Rule 60    routine_body -> compound_stmt
Rule 61    compound_stmt -> BEGIN stmt_list END
Rule 62    stmt_list -> stmt_list stmt SEMI
Rule 63    stmt_list -> epsilon
Rule 64    stmt -> INTEGER COLON non_label_stmt
Rule 65    stmt -> non_label_stmt
Rule 66    non_label_stmt -> assign_stmt
Rule 67    non_label_stmt -> proc_stmt
Rule 68    non_label_stmt -> compound_stmt
Rule 69    non_label_stmt -> if_stmt
Rule 70    non_label_stmt -> repeat_stmt
Rule 71    non_label_stmt -> while_stmt
Rule 72    non_label_stmt -> for_stmt
Rule 73    non_label_stmt -> case_stmt
Rule 74    non_label_stmt -> goto_stmt
Rule 75    assign_stmt -> NAME ASSIGN expression
Rule 76    assign_stmt -> NAME LB expression RB ASSIGN expression
Rule 77    assign_stmt -> NAME DOT NAME ASSIGN expression
Rule 78    proc_stmt -> NAME
Rule 79    proc_stmt -> NAME LP args_list RP
Rule 80    proc_stmt -> SYS_PROC
Rule 81    proc_stmt -> SYS_PROC LP expression_list RP
Rule 82    proc_stmt -> READ LP factor RP
Rule 83    if_stmt -> IF expression THEN stmt else_clause
Rule 84    else_clause -> ELSE stmt
Rule 85    else_clause -> epsilon
Rule 86    repeat_stmt -> REPEAT stmt_list UNTIL expression
Rule 87    while_stmt -> WHILE expression DO stmt
Rule 88    for_stmt -> FOR NAME ASSIGN expression direction expression DO stmt
Rule 89    direction -> TO
Rule 90    direction -> DOWNTO
Rule 91    case_stmt -> CASE expression OF case_expr_list END
Rule 92    case_expr_list -> case_expr_list case_expr
Rule 93    case_expr_list -> case_expr
Rule 94    case_expr -> const_value COLON stmt SEMI
Rule 95    case_expr -> NAME COLON stmt SEMI
Rule 96    goto_stmt -> GOTO INTEGER
Rule 97    expression_list -> expression_list COMMA expression
Rule 98    expression_list -> expression
Rule 99    expression -> expression GE expr
Rule 100   expression -> expression GT expr
Rule 101   expression -> expression LE expr
Rule 102   expression -> expression LT expr
Rule 103   expression -> expression EQUAL expr
Rule 104   expression -> expression UNEQUAL expr
Rule 105   expression -> expr
Rule 106   expr -> expr PLUS term
Rule 107   expr -> expr MINUS term
Rule 108   expr -> expr OR term
Rule 109   expr -> term
Rule 110   term -> term MUL factor
Rule 111   term -> term DIV factor
Rule 112   term -> term MOD factor
Rule 113   term -> term AND factor
Rule 114   term -> factor
Rule 115   factor -> NAME
Rule 116   factor -> NAME LP args_list RP
Rule 117   factor -> SYS_FUNCT
Rule 118   factor -> SYS_FUNCT LP args_list RP
Rule 119   factor -> const_value
Rule 120   factor -> LP expression RP
Rule 121   factor -> NOT factor
Rule 122   factor -> MINUS factor
Rule 123   factor -> NAME LB expression RB
Rule 124   factor -> NAME DOT NAME
Rule 125   args_list -> args_list COMMA expression
Rule 126   args_list -> expression
Rule 127   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 113
ARRAY                : 31
ASSIGN               : 75 76 77 88
BEGIN                : 61
CASE                 : 91
CHAR                 : 13
COLON                : 35 42 49 56 57 64 94 95
COMMA                : 36 97 125
CONST                : 7
DIV                  : 111
DO                   : 87 88
DOT                  : 1 77 124
DOTDOT               : 27 28 29 30
DOWNTO               : 90
ELSE                 : 84
END                  : 32 61 91
EQUAL                : 9 10 20 103
FOR                  : 88
FUNCTION             : 49
GE                   : 99
GOTO                 : 96
GT                   : 100
IF                   : 83
IN                   : 
INTEGER              : 11 64 96
LB                   : 31 76 123
LE                   : 101
LP                   : 26 52 79 81 82 116 118 120
LT                   : 102
MINUS                : 28 29 29 107 122
MOD                  : 112
MUL                  : 110
NAME                 : 2 9 10 20 25 30 30 36 37 49 51 75 76 77 77 78 79 88 95 115 116 123 124 124
NOT                  : 121
OF                   : 31 91
OR                   : 108
PACKED               : 
PLUS                 : 106
PROCEDURE            : 51
PROGRAM              : 2
RB                   : 31 76 123
READ                 : 82
REAL                 : 12
RECORD               : 32
REPEAT               : 86
RP                   : 26 52 79 81 82 116 118 120
SEMI                 : 2 9 10 20 35 42 48 48 50 50 54 62 94 95
SET                  : 
STRING               : 14
SYS_CON              : 15
SYS_FUNCT            : 117 118
SYS_PROC             : 80 81
SYS_TYPE             : 24
THEN                 : 83
TO                   : 89
TYPE                 : 16
UNEQUAL              : 104
UNTIL                : 86
VAR                  : 38 58
WHILE                : 87
WITH                 : 
error                : 

Nonterminals, with rules where they appear

args_list            : 79 116 118 125
array_type_decl      : 22
assign_stmt          : 66
case_expr            : 92 93
case_expr_list       : 91 92
case_stmt            : 73
compound_stmt        : 60 68
const_expr_list      : 7 9
const_part           : 5
const_value          : 9 10 27 27 28 28 29 29 94 119
direction            : 88
else_clause          : 83
epsilon              : 6 8 17 39 47 53 63 85
expr                 : 99 100 101 102 103 104 105 106 107 108
expression           : 75 76 76 77 83 86 87 88 88 91 97 98 99 100 101 102 103 104 120 123 125 126
expression_list      : 81 97
factor               : 82 110 111 112 113 114 121 122
field_decl           : 33 34
field_decl_list      : 32 33
for_stmt             : 72
function_decl        : 43 45
function_head        : 48
goto_stmt            : 74
if_stmt              : 69
label_part           : 5
name_list            : 26 35 36 42 58 59
non_label_stmt       : 64 65
para_decl_list       : 52 54
para_type_list       : 54 55
parameters           : 49 51
proc_stmt            : 67
procedure_decl       : 44 46
procedure_head       : 50
program              : 0
program_head         : 1
record_type_decl     : 23
repeat_stmt          : 70
routine              : 1
routine_body         : 3 4
routine_head         : 3 4
routine_part         : 5 43 44
simple_type_decl     : 21 31 49 56 57
stmt                 : 62 83 84 87 88 94 95
stmt_list            : 61 62 86
sub_routine          : 48 50
term                 : 106 107 108 109 110 111 112 113
type_decl            : 20 31 35 42
type_decl_list       : 16 18
type_definition      : 18 19
type_part            : 5
val_para_list        : 57
var_decl             : 40 41
var_decl_list        : 38 40
var_para_list        : 56
var_part             : 5
while_stmt           : 71

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_head routine DOT
    (2) program_head -> . PROGRAM NAME SEMI

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_head                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_head . routine DOT
    (3) routine -> . routine_head routine_body
    (5) routine_head -> . label_part const_part type_part var_part routine_part
    (6) label_part -> . epsilon
    (127) epsilon -> .

    CONST           reduce using rule 127 (epsilon -> .)
    TYPE            reduce using rule 127 (epsilon -> .)
    VAR             reduce using rule 127 (epsilon -> .)
    FUNCTION        reduce using rule 127 (epsilon -> .)
    PROCEDURE       reduce using rule 127 (epsilon -> .)
    BEGIN           reduce using rule 127 (epsilon -> .)

    routine                        shift and go to state 4
    routine_head                   shift and go to state 5
    label_part                     shift and go to state 6
    epsilon                        shift and go to state 7

state 3

    (2) program_head -> PROGRAM . NAME SEMI

    NAME            shift and go to state 8


state 4

    (1) program -> program_head routine . DOT

    DOT             shift and go to state 9


state 5

    (3) routine -> routine_head . routine_body
    (60) routine_body -> . compound_stmt
    (61) compound_stmt -> . BEGIN stmt_list END

    BEGIN           shift and go to state 12

    routine_body                   shift and go to state 10
    compound_stmt                  shift and go to state 11

state 6

    (5) routine_head -> label_part . const_part type_part var_part routine_part
    (7) const_part -> . CONST const_expr_list
    (8) const_part -> . epsilon
    (127) epsilon -> .

    CONST           shift and go to state 14
    TYPE            reduce using rule 127 (epsilon -> .)
    VAR             reduce using rule 127 (epsilon -> .)
    FUNCTION        reduce using rule 127 (epsilon -> .)
    PROCEDURE       reduce using rule 127 (epsilon -> .)
    BEGIN           reduce using rule 127 (epsilon -> .)

    const_part                     shift and go to state 13
    epsilon                        shift and go to state 15

state 7

    (6) label_part -> epsilon .

    CONST           reduce using rule 6 (label_part -> epsilon .)
    TYPE            reduce using rule 6 (label_part -> epsilon .)
    VAR             reduce using rule 6 (label_part -> epsilon .)
    FUNCTION        reduce using rule 6 (label_part -> epsilon .)
    PROCEDURE       reduce using rule 6 (label_part -> epsilon .)
    BEGIN           reduce using rule 6 (label_part -> epsilon .)


state 8

    (2) program_head -> PROGRAM NAME . SEMI

    SEMI            shift and go to state 16


state 9

    (1) program -> program_head routine DOT .

    $end            reduce using rule 1 (program -> program_head routine DOT .)


state 10

    (3) routine -> routine_head routine_body .

    DOT             reduce using rule 3 (routine -> routine_head routine_body .)


state 11

    (60) routine_body -> compound_stmt .

    DOT             reduce using rule 60 (routine_body -> compound_stmt .)
    SEMI            reduce using rule 60 (routine_body -> compound_stmt .)


state 12

    (61) compound_stmt -> BEGIN . stmt_list END
    (62) stmt_list -> . stmt_list stmt SEMI
    (63) stmt_list -> . epsilon
    (127) epsilon -> .

    END             reduce using rule 127 (epsilon -> .)
    INTEGER         reduce using rule 127 (epsilon -> .)
    NAME            reduce using rule 127 (epsilon -> .)
    SYS_PROC        reduce using rule 127 (epsilon -> .)
    READ            reduce using rule 127 (epsilon -> .)
    BEGIN           reduce using rule 127 (epsilon -> .)
    IF              reduce using rule 127 (epsilon -> .)
    REPEAT          reduce using rule 127 (epsilon -> .)
    WHILE           reduce using rule 127 (epsilon -> .)
    FOR             reduce using rule 127 (epsilon -> .)
    CASE            reduce using rule 127 (epsilon -> .)
    GOTO            reduce using rule 127 (epsilon -> .)

    stmt_list                      shift and go to state 17
    epsilon                        shift and go to state 18

state 13

    (5) routine_head -> label_part const_part . type_part var_part routine_part
    (16) type_part -> . TYPE type_decl_list
    (17) type_part -> . epsilon
    (127) epsilon -> .

    TYPE            shift and go to state 20
    VAR             reduce using rule 127 (epsilon -> .)
    FUNCTION        reduce using rule 127 (epsilon -> .)
    PROCEDURE       reduce using rule 127 (epsilon -> .)
    BEGIN           reduce using rule 127 (epsilon -> .)

    type_part                      shift and go to state 19
    epsilon                        shift and go to state 21

state 14

    (7) const_part -> CONST . const_expr_list
    (9) const_expr_list -> . const_expr_list NAME EQUAL const_value SEMI
    (10) const_expr_list -> . NAME EQUAL const_value SEMI

    NAME            shift and go to state 23

    const_expr_list                shift and go to state 22

state 15

    (8) const_part -> epsilon .

    TYPE            reduce using rule 8 (const_part -> epsilon .)
    VAR             reduce using rule 8 (const_part -> epsilon .)
    FUNCTION        reduce using rule 8 (const_part -> epsilon .)
    PROCEDURE       reduce using rule 8 (const_part -> epsilon .)
    BEGIN           reduce using rule 8 (const_part -> epsilon .)


state 16

    (2) program_head -> PROGRAM NAME SEMI .

    BEGIN           reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    CONST           reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    TYPE            reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    VAR             reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    FUNCTION        reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    PROCEDURE       reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)


state 17

    (61) compound_stmt -> BEGIN stmt_list . END
    (62) stmt_list -> stmt_list . stmt SEMI
    (64) stmt -> . INTEGER COLON non_label_stmt
    (65) stmt -> . non_label_stmt
    (66) non_label_stmt -> . assign_stmt
    (67) non_label_stmt -> . proc_stmt
    (68) non_label_stmt -> . compound_stmt
    (69) non_label_stmt -> . if_stmt
    (70) non_label_stmt -> . repeat_stmt
    (71) non_label_stmt -> . while_stmt
    (72) non_label_stmt -> . for_stmt
    (73) non_label_stmt -> . case_stmt
    (74) non_label_stmt -> . goto_stmt
    (75) assign_stmt -> . NAME ASSIGN expression
    (76) assign_stmt -> . NAME LB expression RB ASSIGN expression
    (77) assign_stmt -> . NAME DOT NAME ASSIGN expression
    (78) proc_stmt -> . NAME
    (79) proc_stmt -> . NAME LP args_list RP
    (80) proc_stmt -> . SYS_PROC
    (81) proc_stmt -> . SYS_PROC LP expression_list RP
    (82) proc_stmt -> . READ LP factor RP
    (61) compound_stmt -> . BEGIN stmt_list END
    (83) if_stmt -> . IF expression THEN stmt else_clause
    (86) repeat_stmt -> . REPEAT stmt_list UNTIL expression
    (87) while_stmt -> . WHILE expression DO stmt
    (88) for_stmt -> . FOR NAME ASSIGN expression direction expression DO stmt
    (91) case_stmt -> . CASE expression OF case_expr_list END
    (96) goto_stmt -> . GOTO INTEGER

    END             shift and go to state 24
    INTEGER         shift and go to state 26
    NAME            shift and go to state 37
    SYS_PROC        shift and go to state 38
    READ            shift and go to state 39
    BEGIN           shift and go to state 12
    IF              shift and go to state 40
    REPEAT          shift and go to state 41
    WHILE           shift and go to state 42
    FOR             shift and go to state 43
    CASE            shift and go to state 44
    GOTO            shift and go to state 45

    stmt                           shift and go to state 25
    non_label_stmt                 shift and go to state 27
    assign_stmt                    shift and go to state 28
    proc_stmt                      shift and go to state 29
    compound_stmt                  shift and go to state 30
    if_stmt                        shift and go to state 31
    repeat_stmt                    shift and go to state 32
    while_stmt                     shift and go to state 33
    for_stmt                       shift and go to state 34
    case_stmt                      shift and go to state 35
    goto_stmt                      shift and go to state 36

state 18

    (63) stmt_list -> epsilon .

    END             reduce using rule 63 (stmt_list -> epsilon .)
    INTEGER         reduce using rule 63 (stmt_list -> epsilon .)
    NAME            reduce using rule 63 (stmt_list -> epsilon .)
    SYS_PROC        reduce using rule 63 (stmt_list -> epsilon .)
    READ            reduce using rule 63 (stmt_list -> epsilon .)
    BEGIN           reduce using rule 63 (stmt_list -> epsilon .)
    IF              reduce using rule 63 (stmt_list -> epsilon .)
    REPEAT          reduce using rule 63 (stmt_list -> epsilon .)
    WHILE           reduce using rule 63 (stmt_list -> epsilon .)
    FOR             reduce using rule 63 (stmt_list -> epsilon .)
    CASE            reduce using rule 63 (stmt_list -> epsilon .)
    GOTO            reduce using rule 63 (stmt_list -> epsilon .)
    UNTIL           reduce using rule 63 (stmt_list -> epsilon .)


state 19

    (5) routine_head -> label_part const_part type_part . var_part routine_part
    (38) var_part -> . VAR var_decl_list
    (39) var_part -> . epsilon
    (127) epsilon -> .

    VAR             shift and go to state 47
    FUNCTION        reduce using rule 127 (epsilon -> .)
    PROCEDURE       reduce using rule 127 (epsilon -> .)
    BEGIN           reduce using rule 127 (epsilon -> .)

    var_part                       shift and go to state 46
    epsilon                        shift and go to state 48

state 20

    (16) type_part -> TYPE . type_decl_list
    (18) type_decl_list -> . type_decl_list type_definition
    (19) type_decl_list -> . type_definition
    (20) type_definition -> . NAME EQUAL type_decl SEMI

    NAME            shift and go to state 51

    type_decl_list                 shift and go to state 49
    type_definition                shift and go to state 50

state 21

    (17) type_part -> epsilon .

    VAR             reduce using rule 17 (type_part -> epsilon .)
    FUNCTION        reduce using rule 17 (type_part -> epsilon .)
    PROCEDURE       reduce using rule 17 (type_part -> epsilon .)
    BEGIN           reduce using rule 17 (type_part -> epsilon .)


state 22

    (7) const_part -> CONST const_expr_list .
    (9) const_expr_list -> const_expr_list . NAME EQUAL const_value SEMI

    TYPE            reduce using rule 7 (const_part -> CONST const_expr_list .)
    VAR             reduce using rule 7 (const_part -> CONST const_expr_list .)
    FUNCTION        reduce using rule 7 (const_part -> CONST const_expr_list .)
    PROCEDURE       reduce using rule 7 (const_part -> CONST const_expr_list .)
    BEGIN           reduce using rule 7 (const_part -> CONST const_expr_list .)
    NAME            shift and go to state 52


state 23

    (10) const_expr_list -> NAME . EQUAL const_value SEMI

    EQUAL           shift and go to state 53


state 24

    (61) compound_stmt -> BEGIN stmt_list END .

    DOT             reduce using rule 61 (compound_stmt -> BEGIN stmt_list END .)
    SEMI            reduce using rule 61 (compound_stmt -> BEGIN stmt_list END .)
    ELSE            reduce using rule 61 (compound_stmt -> BEGIN stmt_list END .)


state 25

    (62) stmt_list -> stmt_list stmt . SEMI

    SEMI            shift and go to state 54


state 26

    (64) stmt -> INTEGER . COLON non_label_stmt

    COLON           shift and go to state 55


state 27

    (65) stmt -> non_label_stmt .

    SEMI            reduce using rule 65 (stmt -> non_label_stmt .)
    ELSE            reduce using rule 65 (stmt -> non_label_stmt .)


state 28

    (66) non_label_stmt -> assign_stmt .

    SEMI            reduce using rule 66 (non_label_stmt -> assign_stmt .)
    ELSE            reduce using rule 66 (non_label_stmt -> assign_stmt .)


state 29

    (67) non_label_stmt -> proc_stmt .

    SEMI            reduce using rule 67 (non_label_stmt -> proc_stmt .)
    ELSE            reduce using rule 67 (non_label_stmt -> proc_stmt .)


state 30

    (68) non_label_stmt -> compound_stmt .

    SEMI            reduce using rule 68 (non_label_stmt -> compound_stmt .)
    ELSE            reduce using rule 68 (non_label_stmt -> compound_stmt .)


state 31

    (69) non_label_stmt -> if_stmt .

    SEMI            reduce using rule 69 (non_label_stmt -> if_stmt .)
    ELSE            reduce using rule 69 (non_label_stmt -> if_stmt .)


state 32

    (70) non_label_stmt -> repeat_stmt .

    SEMI            reduce using rule 70 (non_label_stmt -> repeat_stmt .)
    ELSE            reduce using rule 70 (non_label_stmt -> repeat_stmt .)


state 33

    (71) non_label_stmt -> while_stmt .

    SEMI            reduce using rule 71 (non_label_stmt -> while_stmt .)
    ELSE            reduce using rule 71 (non_label_stmt -> while_stmt .)


state 34

    (72) non_label_stmt -> for_stmt .

    SEMI            reduce using rule 72 (non_label_stmt -> for_stmt .)
    ELSE            reduce using rule 72 (non_label_stmt -> for_stmt .)


state 35

    (73) non_label_stmt -> case_stmt .

    SEMI            reduce using rule 73 (non_label_stmt -> case_stmt .)
    ELSE            reduce using rule 73 (non_label_stmt -> case_stmt .)


state 36

    (74) non_label_stmt -> goto_stmt .

    SEMI            reduce using rule 74 (non_label_stmt -> goto_stmt .)
    ELSE            reduce using rule 74 (non_label_stmt -> goto_stmt .)


state 37

    (75) assign_stmt -> NAME . ASSIGN expression
    (76) assign_stmt -> NAME . LB expression RB ASSIGN expression
    (77) assign_stmt -> NAME . DOT NAME ASSIGN expression
    (78) proc_stmt -> NAME .
    (79) proc_stmt -> NAME . LP args_list RP

    ASSIGN          shift and go to state 56
    LB              shift and go to state 57
    DOT             shift and go to state 58
    SEMI            reduce using rule 78 (proc_stmt -> NAME .)
    ELSE            reduce using rule 78 (proc_stmt -> NAME .)
    LP              shift and go to state 59


state 38

    (80) proc_stmt -> SYS_PROC .
    (81) proc_stmt -> SYS_PROC . LP expression_list RP

    SEMI            reduce using rule 80 (proc_stmt -> SYS_PROC .)
    ELSE            reduce using rule 80 (proc_stmt -> SYS_PROC .)
    LP              shift and go to state 60


state 39

    (82) proc_stmt -> READ . LP factor RP

    LP              shift and go to state 61


state 40

    (83) if_stmt -> IF . expression THEN stmt else_clause
    (99) expression -> . expression GE expr
    (100) expression -> . expression GT expr
    (101) expression -> . expression LE expr
    (102) expression -> . expression LT expr
    (103) expression -> . expression EQUAL expr
    (104) expression -> . expression UNEQUAL expr
    (105) expression -> . expr
    (106) expr -> . expr PLUS term
    (107) expr -> . expr MINUS term
    (108) expr -> . expr OR term
    (109) expr -> . term
    (110) term -> . term MUL factor
    (111) term -> . term DIV factor
    (112) term -> . term MOD factor
    (113) term -> . term AND factor
    (114) term -> . factor
    (115) factor -> . NAME
    (116) factor -> . NAME LP args_list RP
    (117) factor -> . SYS_FUNCT
    (118) factor -> . SYS_FUNCT LP args_list RP
    (119) factor -> . const_value
    (120) factor -> . LP expression RP
    (121) factor -> . NOT factor
    (122) factor -> . MINUS factor
    (123) factor -> . NAME LB expression RB
    (124) factor -> . NAME DOT NAME
    (11) const_value -> . INTEGER
    (12) const_value -> . REAL
    (13) const_value -> . CHAR
    (14) const_value -> . STRING
    (15) const_value -> . SYS_CON

    NAME            shift and go to state 67
    SYS_FUNCT       shift and go to state 69
    LP              shift and go to state 68
    NOT             shift and go to state 71
    MINUS           shift and go to state 65
    INTEGER         shift and go to state 72
    REAL            shift and go to state 73
    CHAR            shift and go to state 74
    STRING          shift and go to state 75
    SYS_CON         shift and go to state 76

    expression                     shift and go to state 62
    expr                           shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 66
    const_value                    shift and go to state 70

state 41

    (86) repeat_stmt -> REPEAT . stmt_list UNTIL expression
    (62) stmt_list -> . stmt_list stmt SEMI
    (63) stmt_list -> . epsilon
    (127) epsilon -> .

    UNTIL           reduce using rule 127 (epsilon -> .)
    INTEGER         reduce using rule 127 (epsilon -> .)
    NAME            reduce using rule 127 (epsilon -> .)
    SYS_PROC        reduce using rule 127 (epsilon -> .)
    READ            reduce using rule 127 (epsilon -> .)
    BEGIN           reduce using rule 127 (epsilon -> .)
    IF              reduce using rule 127 (epsilon -> .)
    REPEAT          reduce using rule 127 (epsilon -> .)
    WHILE           reduce using rule 127 (epsilon -> .)
    FOR             reduce using rule 127 (epsilon -> .)
    CASE            reduce using rule 127 (epsilon -> .)
    GOTO            reduce using rule 127 (epsilon -> .)

    stmt_list                      shift and go to state 77
    epsilon                        shift and go to state 18

state 42

    (87) while_stmt -> WHILE . expression DO stmt
    (99) expression -> . expression GE expr
    (100) expression -> . expression GT expr
    (101) expression -> . expression LE expr
    (102) expression -> . expression LT expr
    (103) expression -> . expression EQUAL expr
    (104) expression -> . expression UNEQUAL expr
    (105) expression -> . expr
    (106) expr -> . expr PLUS term
    (107) expr -> . expr MINUS term
    (108) expr -> . expr OR term
    (109) expr -> . term
    (110) term -> . term MUL factor
    (111) term -> . term DIV factor
    (112) term -> . term MOD factor
    (113) term -> . term AND factor
    (114) term -> . factor
    (115) factor -> . NAME
    (116) factor -> . NAME LP args_list RP
    (117) factor -> . SYS_FUNCT
    (118) factor -> . SYS_FUNCT LP args_list RP
    (119) factor -> . const_value
    (120) factor -> . LP expression RP
    (121) factor -> . NOT factor
    (122) factor -> . MINUS factor
    (123) factor -> . NAME LB expression RB
    (124) factor -> . NAME DOT NAME
    (11) const_value -> . INTEGER
    (12) const_value -> . REAL
    (13) const_value -> . CHAR
    (14) const_value -> . STRING
    (15) const_value -> . SYS_CON

    NAME            shift and go to state 67
    SYS_FUNCT       shift and go to state 69
    LP              shift and go to state 68
    NOT             shift and go to state 71
    MINUS           shift and go to state 65
    INTEGER         shift and go to state 72
    REAL            shift and go to state 73
    CHAR            shift and go to state 74
    STRING          shift and go to state 75
    SYS_CON         shift and go to state 76

    expression                     shift and go to state 78
    expr                           shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 66
    const_value                    shift and go to state 70

state 43

    (88) for_stmt -> FOR . NAME ASSIGN expression direction expression DO stmt

    NAME            shift and go to state 79


state 44

    (91) case_stmt -> CASE . expression OF case_expr_list END
    (99) expression -> . expression GE expr
    (100) expression -> . expression GT expr
    (101) expression -> . expression LE expr
    (102) expression -> . expression LT expr
    (103) expression -> . expression EQUAL expr
    (104) expression -> . expression UNEQUAL expr
    (105) expression -> . expr
    (106) expr -> . expr PLUS term
    (107) expr -> . expr MINUS term
    (108) expr -> . expr OR term
    (109) expr -> . term
    (110) term -> . term MUL factor
    (111) term -> . term DIV factor
    (112) term -> . term MOD factor
    (113) term -> . term AND factor
    (114) term -> . factor
    (115) factor -> . NAME
    (116) factor -> . NAME LP args_list RP
    (117) factor -> . SYS_FUNCT
    (118) factor -> . SYS_FUNCT LP args_list RP
    (119) factor -> . const_value
    (120) factor -> . LP expression RP
    (121) factor -> . NOT factor
    (122) factor -> . MINUS factor
    (123) factor -> . NAME LB expression RB
    (124) factor -> . NAME DOT NAME
    (11) const_value -> . INTEGER
    (12) const_value -> . REAL
    (13) const_value -> . CHAR
    (14) const_value -> . STRING
    (15) const_value -> . SYS_CON

    NAME            shift and go to state 67
    SYS_FUNCT       shift and go to state 69
    LP              shift and go to state 68
    NOT             shift and go to state 71
    MINUS           shift and go to state 65
    INTEGER         shift and go to state 72
    REAL            shift and go to state 73
    CHAR            shift and go to state 74
    STRING          shift and go to state 75
    SYS_CON         shift and go to state 76

    expression                     shift and go to state 80
    expr                           shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 66
    const_value                    shift and go to state 70

state 45

    (96) goto_stmt -> GOTO . INTEGER

    INTEGER         shift and go to state 81


state 46

    (5) routine_head -> label_part const_part type_part var_part . routine_part
    (43) routine_part -> . routine_part function_decl
    (44) routine_part -> . routine_part procedure_decl
    (45) routine_part -> . function_decl
    (46) routine_part -> . procedure_decl
    (47) routine_part -> . epsilon
    (48) function_decl -> . function_head SEMI sub_routine SEMI
    (50) procedure_decl -> . procedure_head SEMI sub_routine SEMI
    (127) epsilon -> .
    (49) function_head -> . FUNCTION NAME parameters COLON simple_type_decl
    (51) procedure_head -> . PROCEDURE NAME parameters

  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for PROCEDURE resolved as shift
    BEGIN           reduce using rule 127 (epsilon -> .)
    FUNCTION        shift and go to state 88
    PROCEDURE       shift and go to state 89

  ! FUNCTION        [ reduce using rule 127 (epsilon -> .) ]
  ! PROCEDURE       [ reduce using rule 127 (epsilon -> .) ]

    routine_part                   shift and go to state 82
    function_decl                  shift and go to state 83
    procedure_decl                 shift and go to state 84
    epsilon                        shift and go to state 85
    function_head                  shift and go to state 86
    procedure_head                 shift and go to state 87

state 47

    (38) var_part -> VAR . var_decl_list
    (40) var_decl_list -> . var_decl_list var_decl
    (41) var_decl_list -> . var_decl
    (42) var_decl -> . name_list COLON type_decl SEMI
    (36) name_list -> . name_list COMMA NAME
    (37) name_list -> . NAME

    NAME            shift and go to state 93

    var_decl_list                  shift and go to state 90
    var_decl                       shift and go to state 91
    name_list                      shift and go to state 92

state 48

    (39) var_part -> epsilon .

    FUNCTION        reduce using rule 39 (var_part -> epsilon .)
    PROCEDURE       reduce using rule 39 (var_part -> epsilon .)
    BEGIN           reduce using rule 39 (var_part -> epsilon .)


state 49

    (16) type_part -> TYPE type_decl_list .
    (18) type_decl_list -> type_decl_list . type_definition
    (20) type_definition -> . NAME EQUAL type_decl SEMI

    VAR             reduce using rule 16 (type_part -> TYPE type_decl_list .)
    FUNCTION        reduce using rule 16 (type_part -> TYPE type_decl_list .)
    PROCEDURE       reduce using rule 16 (type_part -> TYPE type_decl_list .)
    BEGIN           reduce using rule 16 (type_part -> TYPE type_decl_list .)
    NAME            shift and go to state 51

    type_definition                shift and go to state 94

state 50

    (19) type_decl_list -> type_definition .

    NAME            reduce using rule 19 (type_decl_list -> type_definition .)
    VAR             reduce using rule 19 (type_decl_list -> type_definition .)
    FUNCTION        reduce using rule 19 (type_decl_list -> type_definition .)
    PROCEDURE       reduce using rule 19 (type_decl_list -> type_definition .)
    BEGIN           reduce using rule 19 (type_decl_list -> type_definition .)


state 51

    (20) type_definition -> NAME . EQUAL type_decl SEMI

    EQUAL           shift and go to state 95


state 52

    (9) const_expr_list -> const_expr_list NAME . EQUAL const_value SEMI

    EQUAL           shift and go to state 96


state 53

    (10) const_expr_list -> NAME EQUAL . const_value SEMI
    (11) const_value -> . INTEGER
    (12) const_value -> . REAL
    (13) const_value -> . CHAR
    (14) const_value -> . STRING
    (15) const_value -> . SYS_CON
